# command_architecture

./: CMakeLists.txt  README.md  Storage.h  main.cpp
Commands/: Calibration.h  Command.h  CommandList.h  Contract.h  CreditControl.h  Directory.h  Radio.h  Relay.h
Commands/Methods/: Method.h  Radio.h
Communications/: Communication.h  LoRa.h  Serial.h
Guards/: Credit.h  Guard.h  GuardsInit.h  HasCredit.h  IsLocked.h  IsSealed.h  Locked.h  NotLocked.h  NotSealed.h  Sealed.h
Interfaces/: Interface.h  LoRa.h  Serial.h
Tools/: GetAny.h
Validators/: Contains.h  Length.h  Range.h  Validator.h
